# AI-SOC-Agent

./: .dockerignore  .dxtignore  .env.example  .env.local-ip.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DXT_README.md  Dockerfile  GITHUB_PUSH_CHECKLIST.md  MANIFEST.in  Makefile  PHASE_5_PROMPT_ENHANCEMENT_DETAILED_PLAN.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_FIXES_GUIDE.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_CHECKLIST.md  RCA_TROUBLESHOOTING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0.md  SSL_TROUBLESHOOTING_GUIDE.md  STABILITY_TEST_REPORT.md  WAZUH_4_8_MIGRATION.md  WINDOWS_SETUP.md  WRAPPER_SCRIPT_DOCUMENTATION.md  deploy-local-ip.sh  deploy.bat  deploy.ps1  deploy.sh  detailed_import_analysis.md  docker-compose.local-ip.yml  docker-compose.yml  fix-windows-encoding.py  (+20 more)
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
docs/: API_REFERENCE.md  CONFIGURATION_REFERENCE.md  CROSS_PLATFORM_GUIDE.md  DEPLOYMENT_GUIDE.md  DIRECTORY_STRUCTURE.md  DISASTER_RECOVERY.md  IMPLEMENTATION_STATUS.md  IP_PORT_DEPLOYMENT.md  ISSUES.md  LOCAL_SETUP.md  MIGRATION_GUIDE.md  OPERATIONS_MANUAL.md  REMOTE_SETUP.md  UPCOMING.md  claude-desktop-setup.md  dxt-setup.md  macos-troubleshooting.md  unix-troubleshooting.md  windows-troubleshooting.md
docs/development/: CONTRIBUTING.md
docs/releases/: V2_COMPLETION_REPORT.md
docs/technical/: COMPREHENSIVE_AUDIT_REPORT.md  PRODUCTION_READINESS_AUDIT.md
docs/user-guides/: claude-desktop-setup.md  unix-troubleshooting.md
examples/: basic_usage.py
examples/configuration_examples/: basic_config.env  development_config.env  production_config.env
monitoring/: prometheus.yml
scripts/: __init__.py  __main__.py  backup.sh  check_env.py  check_ssl.py  health-check.sh  install-windows.bat  install.py  install_and_verify.py  install_debian.sh  install_fedora.sh  install_macos.sh  install_windows.bat  mcp_wrapper.sh  migrate_v1_to_v2.sh  package_dxt.py  restore.sh  run.py  setup_ssl.py  test_connection.py  test_wrapper.sh  validate_setup.py  verify_dependencies.py
src/: __init__.py  __main__.py  __version__.py  config.py  health_check.py  test_client.py  threathawk_client.py  wazuh_client.py  wazuh_client_old.py  wazuh_mcp_server.py  wazuh_mcp_server_old.py
src/Client/: Styles.css  requirements.txt  wazuh_client.py
src/Style/: styles.css
src/analyzers/: __init__.py  compliance_analyzer.py  security_analyzer.py
src/api/: __init__.py  wazuh_client.py  wazuh_client_manager.py  wazuh_field_mappings.py  wazuh_indexer_client.py
src/monitoring/: __init__.py  performance_monitor.py
src/resilience/: __init__.py  error_recovery.py
src/security/: __init__.py  security_manager.py
src/utils/: __init__.py  import_helper.py  import_resolver.py  logging.py  production_error_handler.py  ssl_config.py  ssl_helper.py  validation.py
src/wazuh_mcp_server/: __init__.py  __version__.py  config.py  main.py
src/wazuh_mcp_server/analyzers/: __init__.py  compliance_analyzer.py  security_analyzer.py
src/wazuh_mcp_server/api/: __init__.py  wazuh_client.py  wazuh_client_manager.py  wazuh_indexer_client.py
tests/: conftest.py  test_agent_ports.py  test_agent_processes.py  test_alert_summary.py  test_analyze_threats.py  test_check_agent_health.py  test_check_ioc.py  test_cluster_nodes.py  test_compliance_check.py  test_config.py  test_critical_vulnerabilities.py  test_dxt_integration.py  test_get_alerts.py  test_log_collector_stats.py  test_phase5_3_realtime.py  test_production_stability.py  test_remoted_stats.py  test_risk_assessment.py  test_rules_summary.py  test_running_agents.py  test_search_wazuh_logs.py  test_security_analyzer.py  test_server.py  test_v101_hotfix.py  test_validation.py  test_vulnerability_summary.py  test_wazuh_integration.py  test_wazuh_stats.py  test_weekly_stats.py
tests/fixtures/: mock_data.py
tests/integration/: __init__.py  test_server.py
tests/phase5/: __init__.py  test_phase5_2_adapters.py  test_phase5_basic.py  test_phase5_integration.py
tests/unit/: __init__.py  test_config.py  test_config_validation.py  test_error_standardization.py  test_optional_dependencies.py  test_statistics_tools.py  test_validator_signatures.py  test_vulnerability_tools.py
(+34 files in other folders)
